@@ -81,50 +81,7 @@ bool CFileFTP::Open(const char* strUserName, const char* strPassword,const char*
   m_bOpened=true;
   return true;
 }
-bool CFileFTP::ReadString(char *szLine, int iLineLength)
-{
-	if (!m_bOpened) return false;
-	__int64 iFilePos=GetPosition();
 
-	int iBytesRead=Read( (unsigned char*)szLine, iLineLength - 1);
-	if (iBytesRead <= 0)  return false;
-	szLine[iBytesRead]=0;
-	for (int i=0; i < iBytesRead; i++)
-	{
-		if ('\n' == szLine[i])
-		{
-			if ('\r' == szLine[i+1])
-			{
-				szLine[i+2]=0;
-				Seek(iFilePos+i+2,SEEK_SET);
-			}
-			else
-			{
-				// end of line
-				szLine[i+1]=0;
-				Seek(iFilePos+i+1,SEEK_SET);
-			}
-			break;
-		}
-		else if ('\r'==szLine[i])
-		{
-			if ('\n' == szLine[i+1])
-			{
-				szLine[i+2]=0;
-				Seek(iFilePos+i+2,SEEK_SET);
-			}
-			else
-			{
-				// end of line
-				szLine[i+1]=0;
-				Seek(iFilePos+i+1,SEEK_SET);
-			}
-			break;
-		}
-	}
-	if (iBytesRead>0) return true;
-	return false;
-}
 bool CFileFTP::Exists(const CURL& url)
 {
 	return Exists(url.GetUserName(), url.GetPassWord(), url.GetHostName(), url.GetFileName(), url.GetPort());
